--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         git config user.email "actions@github.com"
         git config user.name "GitHub Actions"
-        git add src/__init__.py
+        git add src/manifest.json
         git commit -m "Update version number"
         git push origin main
       env:
