--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       env:
         GIT_TOKEN: ${{ secrets.RELEASE_BOOKMARK_FINDER }}
 
-    - name: Update file with new version number
+    - name: Output version number
       id: version_update
       run: python3 .github/update_version.py
 
