--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Bookmark Finder",
-  "description": "Bookmark Finder transforms your bookmarked pages into a searchable database, enabling you to discover them through keywords as if operating your very own personal search engine. It guarantees that all indexed data is stored securely in your local storage, ensuring privacy and speed without the need for external data calls. Experience swift, secure, and efficient searching directly within your browser.",
+  "description": "Bookmark Finder turns bookmarks into a searchable local database for quick, private content discovery without external data.",
   "version": "2024.1.2",
   "icons": {
     "16": "img/icon-16.png",
